prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -202,8 +202,8 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
       <li><strong>Security Type</strong>: SSL/TLS</li>
     </ul>
   <li>Tap <strong>Next</strong>.</li>
-  <li>If prompted with the Security Administration screen, select <strong>Ok<strong> to proceed.</li>
-  <li>Within the <strong>Account Settings<strong> screen, adjust the items you wish to sync.</li>
+  <li>If prompted with the Security Administration screen, select <strong>Ok</strong> to proceed.</li>
+  <li>Within the <strong>Account Settings</strong> screen, adjust the items you wish to sync.</li>
   <li>Tap <strong>Activate</strong>.</li>
   <li>Resolve ticket.</li>
 </ol>
