prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -408,7 +408,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <ol>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>From the home screen, tap the <strong>Windows" icon.</li>
-  <li>Within the application menu, scroll down and tap <strong>Settings".</li>
+  <li>Within the application menu, scroll down and tap <strong>Settings</strong>.</li>
   <li>Tap <strong>email+accounts</strong>.</li>
   <li>Tap <strong>add an account</strong>.</li>
   <li>Tap <strong>advanced setup</strong>.</li>
