prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -33,7 +33,7 @@ h3 { padding-top: 20px; }
 <body>
 <div class="container">
 
-<p>Applications | External applications | Guidebook</p>
+<p>Applications | External applications | Exchange, hosted by Rackspace</p>
 
 <p><strong>Keywords</strong> <br>
 Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
@@ -46,13 +46,15 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <p><mark>Important</mark> All callers should be reminded that as a platinum customer, he or she is entitled to request in-person service at any time.</p>
 
 <h3>Troubleshoot</h3>
-  <p><a href="#">Topic1</a><br>
-  <a href="#">Topic2</a><br>
+  <p><a href="#lost-password">Reset a Lost Password</a><br>
+  <a href="#spam">Questions Concerning Spam</a><br>
+  <a href="#missing-email">Questions Concerning Undelivered or Missing Messages</a><br>
+  <a href="#missing-email">Questions Concerning Storage, Archiving or Quotas</a><br>
+  <a href="#missing-email">Questions Concerning Legal Hold and Retention Policies</a><br>
   &nbsp;</p>
 
 
 <h3>Activate + Setup + Install</h3>
-<p>Before rendering service, verify (1) user identity (should appear on <a href="#users">authorized list</a>) and (2) user device type (see list following).
 
   <p><strong>Android (device-specific)</strong><br>
   <a href="#android-sony">Sony</a><br>
@@ -68,9 +70,9 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   &nbsp;</p>
   <p><strong>Windows</strong><br>
   <a href="#windows-mobile">Windows Mobile</a><br>
-  <a href="#outlook">Outlook (2007,2010,2013)</a><br>
+  <a href="#outlook">Outlook (2007, 2010, 2013)</a><br>
   &nbsp;</p>
-  <p><a href="#other-setup">Other Clients</a></p>
+  <p><strong><a href="#other-setup">Other Clients</a></strong></p>
 
 
 <h3>How-to + Training</h3>
@@ -86,6 +88,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <hr>
 <h2 id="tools-for-resolution">Tools for Resolution</h2>
 <h3 id="required-information">Required Information</h3>
+<p>For best expereience, verify (1) user identity (should appear on <a href="#users">authorized list</a>) and (2) user device type <mark>before</mark> rendering service.</p>
 
 <ul>
   <li>Name</li>
@@ -97,20 +100,20 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 
 <h3 id="users">Additional Information</h3>
 
-<p class="lead">Rackspace Customer Service</p>
-<p>(855) 348-9065</p>
-
-<p class="lead">Authorized Users</p>
 <div class="well well-sm">
-<p>
-<strong>Barbara Snyder</strong>, barbara.snyder@case.edu<br>
-<strong>Jane Vondrak</strong>, jane.vondrak@case.edu<br>
-<strong>William (Bud) Baeslack</strong>, baeslack@case.edu<br>
-<strong>Christianne (Chris) Sheridan</strong>, christianne.sheridan@case.edu<br>
-<strong>Diane Hoard</strong>, diane.hoard@case.edu<br>
-<strong>Katie Brancato</strong>, katie.brancato@case.edu<br>
-<strong>Susan Karaba</strong>, susan.karaba@case.edu
-</p>
+<p><strong>Rackspace Customer Service</strong></p>
+<ul><li>(855) 348-9065<p>Service Desk Analysts should never call Rackspace directly. <mark>Reference Only</mark></p></li></ul>
+
+<p><strong>Authorized Users</strong></p>
+<ul>
+  <li><strong>Barbara Snyder</strong>, barbara.snyder@case.edu</li>
+  <li><strong>Jane Vondrak</strong>, jane.vondrak@case.edu</li>
+  <li><strong>William (Bud) Baeslack</strong>, baeslack@case.edu</li>
+  <li><strong>Christianne (Chris) Sheridan</strong>, christianne.sheridan@case.edu</li>
+  <li><strong>Diane Hoard</strong>, diane.hoard@case.edu</li>
+  <li><strong>Katie Brancato</strong>, katie.brancato@case.edu</li>
+  <li><strong>Susan Karaba</strong>, susan.karaba@case.edu</li>
+</ul>
 </div>
 
 <h3 id="resolver-groups">Resolver Groups</h3>
@@ -128,24 +131,38 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <ol>
   <li><p><strong>Jeremy Cole</strong><br>
     Office: (216) 368-0072<br> 
-    Cell: (440) 477-2232<br>
+    Cell: (440) 477-2232 <mark>after hours only</mark><br>
     Google Voice: (440) 296-9250</p></li>
   <li><p><strong>Stan Kusper</strong><br>
-    Office: (216) 368-6484<br>
+    Office: (216) 368-6484 <mark>after hours only</mark><br>
     Cell: (216) 470-9962</p></li>
   <li><p><strong>Dave Uhrin</strong><br>
     Office: (216) 368-5674<br> 
-    Cell:</p></li>
+    Cell: (216) 212-9207</p></li>
   <li><p><strong>Paul Kalanish</strong><br> 
     Office: (216) 368-5911<br>
     Cell:</p></li>
 </ol>
 </div>
 
-<hr>
-
 <h2>Troubleshoot + Repair</h2>
 <p>This space left blank intentionally</p>
+
+
+<h3 id="lost-password">Reset a Lost Password</h3>
+
+<p>Email account passwords are maintained by the email administrator. Users should contact their office administrator to reset a password. <mark>Following to be performed by office administrator, DSS or escalation resolver ONLY.</mark></p>
+<p>To reset a password for a mailbox, log into the control panel, and perform the following steps:</p>
+  <ol>
+    <li>Mouse over the Go to section drop-down menu and select Rackspace Email.</li>
+    <li>In the Email Accounts section, click the Add / Edit Mailbox link.</li>
+    <li>If you have multiple domains, select the appropriate domain name. Or, to change domains at any time, click the change domain link.</li>
+    <li>Click the mailbox name for which you want to reset the password.</li>
+    <li>In the Password box, enter a new password. The password must be at least 6 characters long, cannot be password, cannot contain a consecutive numeric sequence of 3 or more characters (e.g., 123, 9876), cannot contain the domain name, and cannot contain the user name.</li>
+    <li>In the Confirm box, re-enter the same password you entered in the Password box.</li>
+    <li>Click the Save button.</li>
+    <li>The user can now log into the mailbox using the new password you assigned. For security reasons, the user should change the password.</li>
+  </ol>
 
 <h2>Activate + Setup + Install</h2>
 
@@ -247,6 +264,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <p>Set up a Hosted Exchange Mailbox on Motorola mobile and tablet devices using ActiveSync.</p>
 
 <ol>
+  <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>Locate the <strong>Settings</strong> icon within your Apps Drawer.</li>
   <li>Within Settings, scroll down and select <strong>Add Account</strong>.</li>
@@ -560,6 +578,29 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <h2>Unable to Resolve</h2>
 <p>This space left blank intentionally</p>
 <h2>Outage</h2>
+<p>back to <a href="#">top</a> </p>
+
+<OL>  
+  <li>Verify user identity.</li>
+  <li>Gather resolution information and enter it into the ticket.</li>
+  <li>If after hours, escalate through per the following sequence:<br>
+
+  <div class="well well-sm">
+    <ol>
+      <li><p><strong>Jeremy Cole</strong><br> 
+        Cell: (440) 477-2232<br>
+        Google Voice: (440) 296-9250</p></li>
+      <li><p><strong>Stan Kusper</strong><br>
+        Cell: (216) 470-9962</p></li>
+      <li><p><strong>Dave Uhrin</strong><br>
+        Cell:</p></li>
+      <li><p><strong>Paul Kalanish</strong><br> 
+        Cell:</p></li>
+      </ol>
+    </div>
+    </li>
+  <li>If business hours, escalate using normal daytime contacts.</li>
+
 <p>This space left blank intentionally</p>
     
 <hr>
