prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -40,10 +40,9 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 
 <h1>Exchange, Hosted @ Rackspace<br>
 <small>VIP Support</small></h1>
-<p>ITS supports hosted Exchange service used by the President's office. Any ticket (except an outage) that cannot be resolved by an Analyst should be assigned to Deskside (DSS).</p>
+<p>ITS supports hosted Exchange service used by the President's office. Any ticket (except an outage) that cannot be resolved by an Analyst should be assigned to Deskside (DSS). Also, All callers should be reminded that as a platinum customer, he or she is entitled to request in-person service at any time.</p>
 <p>Escalate all outage reports as described below. A Service Desk Analyst should never contact the vendor or open a vendor support ticket for any reason.
 </p>
-<p><mark>Important</mark> All callers should be reminded that as a platinum customer, he or she is entitled to request in-person service at any time.</p>
 
 <h3>Troubleshoot</h3>
   <p><a href="#lost-password">Reset a Lost Password</a><br>
@@ -106,13 +105,13 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 
 <p><strong>Authorized Users</strong></p>
 <ul>
-  <li><strong>Barbara Snyder</strong>, barbara.snyder@case.edu</li>
-  <li><strong>Jane Vondrak</strong>, jane.vondrak@case.edu</li>
-  <li><strong>William (Bud) Baeslack</strong>, baeslack@case.edu</li>
-  <li><strong>Christianne (Chris) Sheridan</strong>, christianne.sheridan@case.edu</li>
-  <li><strong>Diane Hoard</strong>, diane.hoard@case.edu</li>
-  <li><strong>Katie Brancato</strong>, katie.brancato@case.edu</li>
-  <li><strong>Susan Karaba</strong>, susan.karaba@case.edu</li>
+  <li><strong>Barbara Snyder</strong>, <br>barbara.snyder@case.edu</li>
+  <li><strong>Jane Vondrak</strong>, <br>jane.vondrak@case.edu</li>
+  <li><strong>William (Bud) Baeslack</strong>, <br>baeslack@case.edu</li>
+  <li><strong>Christianne (Chris) Sheridan</strong>, <br>christianne.sheridan@case.edu</li>
+  <li><strong>Diane Hoard</strong>, <br>diane.hoard@case.edu</li>
+  <li><strong>Katie Brancato</strong>, <br>katie.brancato@case.edu</li>
+  <li><strong>Susan Karaba</strong>, <br>susan.karaba@case.edu</li>
 </ul>
 </div>
 
@@ -134,8 +133,8 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     Cell: (440) 477-2232 <mark>after hours only</mark><br>
     Google Voice: (440) 296-9250</p></li>
   <li><p><strong>Stan Kusper</strong><br>
-    Office: (216) 368-6484 <mark>after hours only</mark><br>
-    Cell: (216) 470-9962</p></li>
+    Office: (216) 368-6484<br>
+    Cell: (216) 470-9962 <mark>after hours only</mark></p></li>
   <li><p><strong>Dave Uhrin</strong><br>
     Office: (216) 368-5674<br> 
     Cell: (216) 212-9207</p></li>
@@ -150,19 +149,37 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 
 
 <h3 id="lost-password">Reset a Lost Password</h3>
-
-<p>Email account passwords are maintained by the email administrator. Users should contact their office administrator to reset a password. <mark>Following to be performed by office administrator, DSS or escalation resolver ONLY.</mark></p>
-<p>To reset a password for a mailbox, log into the control panel, and perform the following steps:</p>
+  <p>back to <a href="#">top</a> </p>
   <ol>
-    <li>Mouse over the Go to section drop-down menu and select Rackspace Email.</li>
-    <li>In the Email Accounts section, click the Add / Edit Mailbox link.</li>
-    <li>If you have multiple domains, select the appropriate domain name. Or, to change domains at any time, click the change domain link.</li>
-    <li>Click the mailbox name for which you want to reset the password.</li>
-    <li>In the Password box, enter a new password. The password must be at least 6 characters long, cannot be password, cannot contain a consecutive numeric sequence of 3 or more characters (e.g., 123, 9876), cannot contain the domain name, and cannot contain the user name.</li>
-    <li>In the Confirm box, re-enter the same password you entered in the Password box.</li>
-    <li>Click the Save button.</li>
-    <li>The user can now log into the mailbox using the new password you assigned. For security reasons, the user should change the password.</li>
+    <li>Verify user identity.</li>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Assign ticket to DSS.</li>
   </ol>
+  
+  <p><mark>Reference Only</mark></p>
+  <p>Admins can change mailbox details, including passwords, by editing the mailbox. Users should contact their office administrator to reset a password. <mark>Following to be performed by office administrator, DSS or escalation resolver ONLY.</mark></p>
+
+  <div class="well">
+  
+  <p>To edit a mailbox, log into the Control Panel, and perform the following steps:</p>
+  <ol>
+    <li>Mouse over the <strong>Go to section</strong> drop-down menu and select <strong>Microsoft Exchange</strong>.</li>
+    <li>In the <strong>Email Accounts</strong> section, click the <strong>Add / Edit Mailbox</strong> link.</li>
+    <li>Click the Display Name you want to edit.</li>
+    <li>Edit <strong>Password</strong>, taking care to meet the following password requirements:
+      <ul>
+        <li>Passwords must be at least 8 characters long.</li>
+        <li>Passwords must include at least 3 of the following: English uppercase characters; English lowercase characters; numerals (0-9); non-alphabet characters (such as !, #, $, %).</li> 
+        <li>Avoid using characters from your Account Name (e.g., user@domain.com), Full Name, Initials, or  Display Name.</li>
+        <li>The <strong>Requirements</strong> bar will be full when the password meets the minimum requirements.</li>
+      </ul>
+    <li>Confirm Password—Retype the password.</li>
+    <li>Click the Save button.</li>
+    <li>Provide temporary password to user.</li>
+    <li>User should then log into Control Panel and repeat steps above to change temporary password.</li>
+  </ol>
+  </div>
+
 
 <h2>Activate + Setup + Install</h2>
 
@@ -172,6 +189,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <p>Set up a Hosted Exchange Mailbox on Sony Experia mobile and tablet devices using ActiveSync.</p>
 
 <ol>
+  <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>Locate the <strong>Settings</strong> icon within your Apps Drawer.</li>
   <li>Within Settings, scroll down to <strong>Accounts</strong> and select <strong>Add account</strong>.</li>
@@ -202,6 +220,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <p>Set up a Hosted Exchange Mailbox on Google Nexus mobile and tablet devices using ActiveSync.</p>
 
 <ol>
+  <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>Locate the <strong>Settings</strong> icon within your Apps Drawer.</li>
   <li>Within Settings, scroll down to <strong>Personal</strong> and select <strong>Accounts</strong>.</li>
@@ -231,6 +250,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <p>Set up a Hosted Exchange Mailbox on HTC mobile and tablet devices using ActiveSync.</p>
 
 <ol>
+  <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>Locate the <strong>Settings</strong> icon within your Apps Drawer.</li>
   <li>Within Settings, scroll down and select <strong>Accounts and Sync</strong>.</li>
@@ -293,6 +313,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <p>Set up a Hosted Exchange Mailbox on Samsung mobile and tablet devices using ActiveSync.</p>
 
 <ol>
+  <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>Locate the <strong>Settings</strong> icon within your Apps Drawer.</li>
   <li>Within Settings, scroll down and select <strong>Add Account</strong>.</li>
@@ -324,6 +345,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <p>Configure your client to use traditional POP/IMAP + SMTP.</p>
 
 <ol>
+  <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>Use the following settings:<br>
   <p>&nbsp;</p>
@@ -373,6 +395,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <p>Set up an Apple iOS device with Hosted Exchange mailbox.</p>
   
 <ol>
+  <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>On the home screen, tap the <strong>Settings</strong> icon.</li>
   <li>Within Settings, tap <strong>Mail, Contacts, Calendars</strong>.</li>
@@ -401,6 +424,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <p>Set up Apple Mail with Hosted Exchange mailbox.</p>
 
 <ol>
+  <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>Launch <strong>System Preferences</strong>.</li>
   <li>Within System Preferences, click <strong>Internet Accounts</strong>.</li>
@@ -424,6 +448,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <p>Set up a Windows Mobile device with Hosted Exchange mailbox</p>
 
 <ol>
+  <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>From the home screen, tap the <strong>Windows</strong> icon.</li>
   <li>Within the application menu, scroll down and tap <strong>Settings</strong>.</li>
@@ -454,6 +479,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <p>Set up Outlook with Hosted Exchange mailbox.</p>
 
 <ol>
+  <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li><strong>Windows 7</strong>: Start Menu -> Control Panel. Double-click on <strong>Mail</strong>.</li>
   <li><strong>Windows 8</strong>: Open the <strong>Charms</strong> by moving your mouse to the top right of your screen. Select <strong>Search</strong>. (Search for "Mail")</li>
@@ -504,6 +530,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <p>Set up an email client with Hosted Exchange mailbox.</p>
 
   <ol>
+  <li>Verify user identity.</li>  
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>If your email client supports Exchange Web Services (EWS), use the following settings:<br>
   <p>&nbsp;</p>
@@ -576,11 +603,23 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <h2>Billing</h2>
 <p>This space left blank intentionally</p>
 <h2>Unable to Resolve</h2>
-<p>This space left blank intentionally</p>
+<p>back to <a href="#">top</a> </p>
+
+  <p>Any ticket (except an outage) that cannot be resolved by an Analyst should be assigned to Deskside (DSS). Also, All callers should be reminded that as a platinum customer, he or she is entitled to request in-person service at any time.</p>
+  <p>Escalate all outage reports as described below. A Service Desk Analyst should never contact the vendor or open a vendor support ticket for any reason.</p>
+
+  <ol>
+    <li>Verify user identity.</li>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Note any troubleshooting steps taken.</li>
+    <li>Describe the problem.</li>
+    <li>Assign ticket to <strong>DSS</strong> resolver group.</li>
+  </ol>
+
 <h2>Outage</h2>
 <p>back to <a href="#">top</a> </p>
 
-<OL>  
+<ol>  
   <li>Verify user identity.</li>
   <li>Gather resolution information and enter it into the ticket.</li>
   <li>If after hours, escalate through per the following sequence:<br>
@@ -599,9 +638,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
       </ol>
     </div>
     </li>
-  <li>If business hours, escalate using normal daytime contacts.</li>
-
-<p>This space left blank intentionally</p>
+  <li>If business hours, escalate using <a href="#how-te-escalate">normal daytime contacts.</a></li>
     
 <hr>
 
