prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -41,16 +41,14 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <h1>Exchange, Hosted @ Rackspace<br>
 <small>VIP Support</small></h1>
 <p>ITS supports hosted Exchange service used by the President's office. Any ticket (except an outage) that cannot be resolved by an Analyst should be assigned to Deskside (DSS). Also, All callers should be reminded that as a platinum customer, he or she is entitled to request in-person service at any time.</p>
-<p>Escalate all outage reports as described below. A Service Desk Analyst should never contact the vendor or open a vendor support ticket for any reason.
-</p>
+<p>Escalate all outage reports as described below. A Service Desk Analyst should never contact the vendor or open a vendor support ticket for any reason.</p>
 
 <h3>Troubleshoot</h3>
   <p><a href="#lost-password">Reset a Lost Password</a><br>
   <a href="#spam">Questions Concerning Spam</a><br>
   <a href="#missing-email">Questions Concerning Undelivered or Missing Messages</a><br>
-  <a href="#missing-email">Questions Concerning Storage, Archiving or Quotas</a><br>
-  <a href="#missing-email">Questions Concerning Legal Hold and Retention Policies</a><br>
-  &nbsp;</p>
+  <a href="#storage">Questions Concerning Storage, Archiving or Quotas</a><br>
+  <a href="#retention">Questions Concerning Legal Hold and Retention Policies</a></p>
 
 
 <h3>Activate + Setup + Install</h3>
@@ -61,16 +59,13 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <a href="#android-htc">HTC</a><br>
   <a href="#android-motorola">Motorola</a><br>
   <a href="#android-samsung">Samsung</a><br>
-  <a href="#android-lg">LG</a><br>
-  &nbsp;</p>
+  <a href="#android-lg">LG</a><br></p>
   <p><strong>Apple</strong><br>
   <a href="#apple-ios">iOS</a><br>
-  <a href="#apple-macmail">Mac Mail</a><br>
-  &nbsp;</p>
+  <a href="#apple-macmail">Mac Mail</a><br></p>
   <p><strong>Windows</strong><br>
   <a href="#windows-mobile">Windows Mobile</a><br>
-  <a href="#outlook">Outlook (2007, 2010, 2013)</a><br>
-  &nbsp;</p>
+  <a href="#outlook">Outlook (2007, 2010, 2013)</a><br></p>
   <p><strong><a href="#other-setup">Other Clients</a></strong></p>
 
 
@@ -179,6 +174,41 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     <li>User should then log into Control Panel and repeat steps above to change temporary password.</li>
   </ol>
   </div>
+
+  <h3 id="spam">Questions Concerning Spam</h3>
+  <p>back to <a href="#">top</a> </p>
+  <p>Admins and DSS can change spam filtering rules.</p>
+
+  <ol>
+    <li>Verify user identity.</li>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Assign ticket to <strong>DSS</strong> for correct ticket routing.</li>
+  </ol>
+  
+  <h3 id="missing-email">Questions Concerning Undelivered or Missing Messages</h3>
+  <p>back to <a href="#">top</a> </p>
+  <ol>
+    <li>Verify user identity.</li>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Determine whether missing message is shown in "Trash" or "Spam" folder.</li>
+    <li>Gather any available detail about the sender and expected time of receipt.</li>
+    <li>Assign ticket to <strong>DSS</strong>.</li>
+  </ol>
+  
+  <h3 id="storage">Questions Concerning Storage, Archiving or Quotas</h3>
+  <p>back to <a href="#">top</a> </p>
+  <p>Admins and DSS can change mailbox details, including storage limits, by editing the mailbox.</p>
+
+   <ol>
+    <li>Verify user identity.</li>
+    <li>Gather resolution information and enter it into the ticket.</li>
+    <li>Assign ticket to <strong>DSS</strong> for correct ticket routing.</li>
+  </ol>
+  
+  <h3 id="retention">Questions Concerning Legal Hold and Retention Policies</h3>
+  <p>back to <a href="#">top</a> </p>
+  
+  <p>Questions concerning retention policies should <mark>ONLY</mark> be addressed by approriate individuals in the Office of General Counsel, or empowered vendor-representatives. Direct the user to contact his or her office administrator. This person will determine correct next steps.</p>
 
 
 <h2>Activate + Setup + Install</h2>
