prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -46,9 +46,9 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
 <h3>Troubleshoot</h3>
   <p><a href="#lost-password">Reset a Lost Password</a><br>
   <a href="#spam">Questions Concerning Spam</a><br>
-  <a href="#missing-email">Questions Concerning Undelivered or Missing Messages</a><br>
-  <a href="#storage">Questions Concerning Storage, Archiving or Quotas</a><br>
-  <a href="#retention">Questions Concerning Legal Hold and Retention Policies</a></p>
+  <a href="#missing-email">Undelivered or Missing Messages</a><br>
+  <a href="#storage">Storage, Archiving or Quotas</a><br>
+  <a href="#retention">Legal Hold and Retention Policies</a></p>
 
 
 <h3>Activate + Setup + Install</h3>
@@ -59,24 +59,17 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
   <a href="#android-htc">HTC</a><br>
   <a href="#android-motorola">Motorola</a><br>
   <a href="#android-samsung">Samsung</a><br>
-  <a href="#android-lg">LG</a><br></p>
+  <a href="#android-lg">LG</a></p>
   <p><strong>Apple</strong><br>
   <a href="#apple-ios">iOS</a><br>
-  <a href="#apple-macmail">Mac Mail</a><br></p>
+  <a href="#apple-macmail">Mac Mail</a></p>
   <p><strong>Windows</strong><br>
   <a href="#windows-mobile">Windows Mobile</a><br>
-  <a href="#outlook">Outlook (2007, 2010, 2013)</a><br></p>
+  <a href="#outlook">Outlook (2007, 2010, 2013)</a></p>
   <p><strong><a href="#other-setup">Other Clients</a></strong></p>
-
-
-<h3>How-to + Training</h3>
-  <p><a href="#">Topic1</a><br>
-  <a href="#">Topic2</a><br>
-  &nbsp;</p>
 
 <h3><a href="#unable-to-resolve">Other + Unable to Resolve</h3>
 <h3><a href="#outage">Report an Outage</a></h3>
-
 
 
 <hr>
@@ -168,8 +161,8 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
         <li>Avoid using characters from your Account Name (e.g., user@domain.com), Full Name, Initials, or  Display Name.</li>
         <li>The <strong>Requirements</strong> bar will be full when the password meets the minimum requirements.</li>
       </ul>
-    <li>Confirm Password—Retype the password.</li>
-    <li>Click the Save button.</li>
+    <li>Retype the password to confirm.</li>
+    <li>Click <strong>Save</strong>.</li>
     <li>Provide temporary password to user.</li>
     <li>User should then log into Control Panel and repeat steps above to change temporary password.</li>
   </ol>
@@ -185,7 +178,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     <li>Assign ticket to <strong>DSS</strong> for correct ticket routing.</li>
   </ol>
   
-  <h3 id="missing-email">Questions Concerning Undelivered or Missing Messages</h3>
+  <h3 id="missing-email">Undelivered or Missing Messages</h3>
   <p>back to <a href="#">top</a> </p>
   <ol>
     <li>Verify user identity.</li>
@@ -195,7 +188,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     <li>Assign ticket to <strong>DSS</strong>.</li>
   </ol>
   
-  <h3 id="storage">Questions Concerning Storage, Archiving or Quotas</h3>
+  <h3 id="storage">Storage, Archiving or Quotas</h3>
   <p>back to <a href="#">top</a> </p>
   <p>Admins and DSS can change mailbox details, including storage limits, by editing the mailbox.</p>
 
@@ -205,7 +198,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     <li>Assign ticket to <strong>DSS</strong> for correct ticket routing.</li>
   </ol>
   
-  <h3 id="retention">Questions Concerning Legal Hold and Retention Policies</h3>
+  <h3 id="retention">Legal Hold and Retention Policies</h3>
   <p>back to <a href="#">top</a> </p>
   
   <p>Questions concerning retention policies should <mark>ONLY</mark> be addressed by approriate individuals in the Office of General Counsel, or empowered vendor-representatives. Direct the user to contact his or her office administrator. This person will determine correct next steps.</p>
@@ -662,7 +655,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
       <li><p><strong>Stan Kusper</strong><br>
         Cell: (216) 470-9962</p></li>
       <li><p><strong>Dave Uhrin</strong><br>
-        Cell:</p></li>
+        Cell: (216) 212-9207</p></li>
       <li><p><strong>Paul Kalanish</strong><br> 
         Cell:</p></li>
       </ol>
