prez office stuff

--- a/scripts/presidentsoffice-rackspace.html
+++ b/scripts/presidentsoffice-rackspace.html
@@ -128,7 +128,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
     Cell: (216) 212-9207</p></li>
   <li><p><strong>Paul Kalanish</strong><br> 
     Office: (216) 368-5911<br>
-    Cell:</p></li>
+    Cell: (216) 538-1986</p></li>
 </ol>
 </div>
 
@@ -657,7 +657,7 @@ Rackspace; Email; Calendar; Exchange; President; VIP; Platinum</p>
       <li><p><strong>Dave Uhrin</strong><br>
         Cell: (216) 212-9207</p></li>
       <li><p><strong>Paul Kalanish</strong><br> 
-        Cell:</p></li>
+        Cell: (216) 538-1986</p></li>
       </ol>
     </div>
     </li>
