als edits per M Kenney

--- a/guides/als-draft.html
+++ b/guides/als-draft.html
@@ -4,49 +4,19 @@
 <meta charset="utf-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>ALS - Quick Start Guide</title>
+ <title>Video Input Control Panel - Quick Start Guide</title>
 
 <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <script src="/bootstrap/js/bootstrap.min.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-<script src="https://togetherjs.com/togetherjs-min.js"></script>
-
-<script type="text/javascript">
-<!--
-    function toggle_visibility(id) {
-       var e = document.getElementById(id);
-       if(e.style.display == 'block')
-          e.style.display = 'none';
-       else
-          e.style.display = 'block';
-    }
-//-->
-</script>
-
 
 <style>
 
 h2 { padding-top: 30px; }
 h3 { padding-top: 20px; }
-
-.copy-left {
-  display: inline-block;
-  text-align: right;
-  margin: 0;
- -moz-transform: scaleX(-1);
- -o-transform: scaleX(-1);
- -webkit-transform: scaleX(-1);
- transform: scaleX(-1);
- filter: FlipH;
- -ms-filter: "FlipH";
- }
-
 body { padding-top: 100px; }
 
 </style>
-
-
-
 </head>
 
 <nav class="navbar navbar-default navbar-fixed-top" style="  background-color: #0a304e;">
@@ -54,9 +24,9 @@ body { padding-top: 100px; }
 		<div class="row">
 		<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
 			<div class="visible-xs visible-sm hidden-md hidden-lg">
-				<h1 style="color: white">ALS <small style="color: #c8d1d7">Quick Start Guide</small></h1></div>
+				<h1 style="color: white">Video Input <small style="color: #c8d1d7">Quick Start Guide</small></h1></div>
 			<div class="hidden-xs hidden-sm visible-md visible-lg">
-				<h1 style="color: white">Active Learning Spaces 
+				<h1 style="color: white">Video Input Control Panel 
 				<small style="color: #c8d1d7">Quick Start Guide</small></h1></div>
 		</div>
 		</div>
@@ -68,11 +38,10 @@ body { padding-top: 100px; }
 
 <div class="container">
 
-<p class="lead">Quickly and simply configure an Active Learning Space classroom for nearly any purpose in 3 steps.</p>
+<p class="lead">Quickly and simply configure an Active Learning Space classroom.</p>
 
 
 <button onclick="javascript:window.print()" type="button" class="btn btn-default hidden-xs"><span class="glyphicon glyphicon-print"></span> Print</button>
-<!-- <button onclick="TogetherJS(this); return false;" type="button" class="btn btn-default"><span class="glyphicon glyphicon-user"></span> Live Help</button> -->
 
 <p>&nbsp;</p>
 
@@ -81,23 +50,24 @@ body { padding-top: 100px; }
 <div class="col-md-12 col-sm-12">
   <div class="panel panel-default">
     <div class="panel-heading">
-      <h4 class="panel-title">
-        <a onclick="toggle_visibility('turn-on');">
-          Turn the room on <span class="glyphicon glyphicon-off pull-right"></span>
-        </a>
-      </h4>
+      <h4 class="panel-title">Turn the room on <span class="glyphicon glyphicon-off pull-right"></span></h4>
     </div>
-      <div id="turn-on" class="panel-body" style="display:none">
+      <div class="panel-body">
         <ol>
-          <li>Using the control touch panel, find the power icon or button labelled <strong>Start</strong> and tap it.
-          <li>Individual input devices (e.g., document camera, media players, etc.) power on or return from standby when selected as input.
+          <li>Touch the control panel to activate it.</li>
+          <li>Choose a presentation source from the options shown at the bottom of the control touch panel. Swipe left or right to show more options.</li>
+          <li>Drag your selected source to the display(s) to start the projection system. 
+          <li>If control panel does not respond to your touch, try again, but more slowly. Tap and hold for 3 seconds.
+          <li>A different source may be shown on any display.<br>
+          (<mark>NOTE</mark>: Controls for some devices, e.g. document camera and Apple TV, may be accessed using the icon in the lower left corner of the control panel).</li>
+          <li>To show the same source on all displays, drag the source to the "all displays" target.
+          <li>To turn the room off, find the control labelled Quit/Shutdown and drag it to "all displays".
+          <li>Call the ITS Service Desk at (216) 368-<strong>HELP</strong> (4357) if you need additional help.
           <p>&nbsp;</p>
             <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-10 col-xs-10">
               <img src="https://04a4fd5b8e9010ec524923a293510c973c1291c9.googledrive.com/host/0B5e4Smfyuda_d01lc0xUQmJURWc/ALS/als-bing-204-power.png" class="img-responsive img-rounded"></div></div><p>&nbsp;</p></li>
-          <li>To turn the room off, find the control labelled <strong>Quit/Shutdown</strong> and tap it.</li>
-          <li>If control panel does not respond to your touch, try again, but more slowly. Tap and hold for 3 seconds.</li>
-        </ol>
+         </ol>
       </div>
     </div>
 </div>
